[package]
name = "scanolotl"
version = "0.1.0"
authors = ["justfr33z"]
edition = "2018"

[dependencies]
clap = "2.33.3"
futures = "0.3.13"
async-std = "1.9.0"
indicatif = "0.15.0"
serde_json = "1.0.64"
async-trait = "0.1.50"
serde = { version = "1.0.125", features = ["derive"] }
asnyc-byteorder = { git = "https://github.com/Justfr33z/async-byteorder", version = "1.4.3", branch = "main" }